--- a/src/css/fonts.css
+++ b/src/css/fonts.css
@@ -1,10 +1,18 @@
 @font-face {
   font-family: "Roboto";
-  src: url("./Roboto/static/Roboto-Regular.ttf") format("truetype");
+  src: url("../fonts/Roboto/static/Roboto-Regular.ttf") format("truetype");
   font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Roboto";
+  src: url("../fonts/Roboto/static/Roboto-SemiBold.ttf") format("truetype");
+  font-weight: 600;
   font-style: normal;
 }
 
 body {
   font-family: "Roboto", sans-serif;
+  font-weight: normal;
 }
