--- a/src/css/global.css
+++ b/src/css/global.css
@@ -1,5 +1,4 @@
 :root {
-  /* light theme colors */
   --primary-color: #f3f3f3;
   --secondary-color: #fefefe;
   --tertiary-color: #ebebeb;
@@ -10,16 +9,17 @@
   );
 }
 
-[data-theme="dark"] {
-  /* dark theme colors */
-  --primary-color: #000000;
-  --secondary-color: #2a2a2a;
-  --tertiary-color: #111111;
-  --contrast-primary-color: #efefef;
-  --transparent-primary-color: linear-gradient(
-    rgba(0, 0, 0, 0.3),
-    rgba(0, 0, 0, 0.6)
-  );
+@media (prefers-color-scheme: dark) {
+  :root {
+    --primary-color: #000000;
+    --secondary-color: #2a2a2a;
+    --tertiary-color: #111111;
+    --contrast-primary-color: #efefef;
+    --transparent-primary-color: linear-gradient(
+      rgba(0, 0, 0, 0.3),
+      rgba(0, 0, 0, 0.6)
+    );
+  }
 }
 
 body {
