Make Board style for tablet size devices

--- a/src/css/global.css
+++ b/src/css/global.css
@@ -7,6 +7,9 @@
     rgba(255, 255, 255, 0.6),
     rgba(255, 255, 255, 0.6)
   );
+
+  --font-default-size: 16px;
+  --font-tablet-scale: 1.2;
 }
 
 @media (prefers-color-scheme: dark) {
