--- a/src/css/global.css
+++ b/src/css/global.css
@@ -3,13 +3,14 @@
   --secondary-color: #fefefe;
   --tertiary-color: #ebebeb;
   --contrast-primary-color: #1b1b1b;
+  --highlight-primary-color: #d01e1f;
   --transparent-primary-color: linear-gradient(
     rgba(255, 255, 255, 0.6),
     rgba(255, 255, 255, 0.6)
   );
 
   --font-default-size: 16px;
-  --font-tablet-scale: 1.2;
+  --font-tablet-scale: 1.1;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -18,6 +19,7 @@
     --secondary-color: #2a2a2a;
     --tertiary-color: #111111;
     --contrast-primary-color: #efefef;
+    --highlight-primary-color: #9a1616;
     --transparent-primary-color: linear-gradient(
       rgba(0, 0, 0, 0.3),
       rgba(0, 0, 0, 0.6)
@@ -26,7 +28,7 @@
 }
 
 body {
-  min-width: 100%;
+  min-width: 100vw;
   min-height: 100vh;
   background-color: #f3f3f3;
 }
