Task drag & drop almost done

--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -104,6 +104,10 @@ ul {
   list-style: none;
 } /* we'll restore bullets as needed for content */
 
+li {
+  list-style: none;
+}
+
 blockquote,
 q {
   quotes: none;
