More intuitive drag and drop for mobile

--- a/src/css/global.css
+++ b/src/css/global.css
@@ -4,6 +4,7 @@
   --tertiary-color: #ebebeb;
   --contrast-primary-color: #1b1b1b;
   --highlight-primary-color: #d01e1f;
+  --highlight-secondary-color: #ffc800;
   --transparent-primary-color: linear-gradient(
     rgba(255, 255, 255, 0.6),
     rgba(255, 255, 255, 0.6)
@@ -20,6 +21,7 @@
     --tertiary-color: #111111;
     --contrast-primary-color: #efefef;
     --highlight-primary-color: #9a1616;
+    --highlight-secondary-color: #c49a00;
     --transparent-primary-color: linear-gradient(
       rgba(0, 0, 0, 0.3),
       rgba(0, 0, 0, 0.6)
