Change text color for dark theme

--- a/src/css/global.css
+++ b/src/css/global.css
@@ -19,7 +19,7 @@
     --primary-color: #000000;
     --secondary-color: #2a2a2a;
     --tertiary-color: #111111;
-    --contrast-primary-color: #efefef;
+    --contrast-primary-color: #b4b4b4;
     --highlight-primary-color: #9a1616;
     --highlight-secondary-color: #c49a00;
     --transparent-primary-color: linear-gradient(
